cmake_minimum_required(VERSION 3.6)
project(filler)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    libft/ft_printf/Handlers/flags_handler.c
    libft/ft_printf/Handlers/flags_handler2.c
    libft/ft_printf/Handlers/type_handlers_cper.c
    libft/ft_printf/Handlers/type_handlers_oouuxxu.c
    libft/ft_printf/Handlers/type_handlers_spdduiuu.c
    libft/ft_printf/UHandlers/unicode_chars.c
    libft/ft_printf/UHandlers/utools.c
    libft/ft_printf/UHandlers/wchar_paste.c
    libft/ft_printf/ft_printf.c
    libft/ft_printf/ft_printf.h
    libft/ft_printf/ft_printf_parser.c
    libft/ft_printf/paste_arg.c
    libft/ft_atof.c
    libft/ft_atoi.c
    libft/ft_bzero.c
    libft/ft_cwords.c
    libft/ft_isalnum.c
    libft/ft_isalpha.c
    libft/ft_isascii.c
    libft/ft_isdigit.c
    libft/ft_isprint.c
    libft/ft_itoa.c
    libft/ft_itoa_base.c
    libft/ft_lstadd.c
    libft/ft_lstdel.c
    libft/ft_lstdelone.c
    libft/ft_lstiter.c
    libft/ft_lstmap.c
    libft/ft_lstnew.c
    libft/ft_memalloc.c
    libft/ft_memccpy.c
    libft/ft_memchr.c
    libft/ft_memcmp.c
    libft/ft_memcpy.c
    libft/ft_memdel.c
    libft/ft_memmove.c
    libft/ft_memset.c
    libft/ft_modul.c
    libft/ft_numlen.c
    libft/ft_pow.c
    libft/ft_putchar.c
    libft/ft_putchar_fd.c
    libft/ft_putendl.c
    libft/ft_putendl_fd.c
    libft/ft_putnbr.c
    libft/ft_putnbr_fd.c
    libft/ft_putstr.c
    libft/ft_putstr_fd.c
    libft/ft_strcat.c
    libft/ft_strchr.c
    libft/ft_strclen.c
    libft/ft_strclr.c
    libft/ft_strcmp.c
    libft/ft_strcount.c
    libft/ft_strcpy.c
    libft/ft_strdel.c
    libft/ft_strdup.c
    libft/ft_strequ.c
    libft/ft_striter.c
    libft/ft_striteri.c
    libft/ft_strjoin.c
    libft/ft_strlcat.c
    libft/ft_strlen.c
    libft/ft_strmap.c
    libft/ft_strmapi.c
    libft/ft_strncat.c
    libft/ft_strncmp.c
    libft/ft_strncpy.c
    libft/ft_strnequ.c
    libft/ft_strnew.c
    libft/ft_strnstr.c
    libft/ft_strrchr.c
    libft/ft_strrev.c
    libft/ft_strsplit.c
    libft/ft_strstr.c
    libft/ft_strsub.c
    libft/ft_strtrim.c
    libft/ft_tolower.c
    libft/ft_toupper.c
    libft/ft_words.c
    libft/get_next_line.c
    libft/get_next_line.h
    libft/libft.h main.c
        filler.h)

add_executable(filler ${SOURCE_FILES})